[project]
name = "research-agent-pro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "arxiv>=2.4.1",
    "ddgs>=9.12.0",
    "duckduckgo-search>=8.1.1",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.23",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.1.3",
    "python-dotenv>=1.2.2",
    "wikipedia>=1.4.0",
]
